# kikosim

./: .gitignore  README.md  pytest.ini
backend/: analyze_ordermanagement_sequences.py  constants.py  main.py  models.py  requirements.txt  services.py
benchmarking/alice_asks_bob/: alice.py  alice_asks_bob.bspl  bob.py
benchmarking/treatment/: DECISIONS.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
ra_transformer_lib_src/: README.md  pyproject.toml
ra_transformer_lib_src/ra_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ra_transformer_lib_src/ra_transformer_lib/: __init__.py  ast_modifier.py  code_generator.py  config_handler.py  data_models.py  duration_validation.py  memory_api.py  simulation_runner.py  transformation_core.py
ra_transformer_lib_src/ra_transformer_lib/jinja_templates/: complete_snippet.py.j2  configuration.py.j2  initiator_timeupdate_snippet.py.j2  resource_snippet.py.j2  runner.py.j2  task_config.py.j2
ra_transformer_lib_src/ra_transformer_lib/templates/: ra_helpers.py  requirements.txt  resource_agent.bspl  resource_agent.py  simple_logging.py  timeservice.bspl  timeservice_agent.py
results/: 1-courier_1-clerk.csv  1-courier_1-clerk_completed.csv  1-courier_2-clerk.csv  1-courier_2-clerk_completed.csv  1-courier_3-clerk.csv  1-courier_3-clerk_completed.csv  1-courier_4-clerk.csv  1-courier_4-clerk_completed.csv  2-courier_1-clerk.csv  2-courier_1-clerk_completed.csv  3-courier_1-clerk.csv  3-courier_1-clerk_completed.csv  4-courier_1-clerk.csv  4-courier_1-clerk_completed.csv
(+38 files in other folders)
