[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ra_transformer"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A library for the Deferred Resource-Agent pattern transformation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astor; python_version<'3.9'",
    "jinja2",
]

[tool.setuptools]
packages = ["ra_transformer_lib"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues" 